clusters/cl01tl/manifests/searxng/HTTPRoute-searxng.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  labels:
    app.kubernetes.io/instance: searxng
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: searxng
    helm.sh/chart: searxng-5.1.0
  namespace: searxng
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "searxng.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: searxng-browser
          namespace: searxng
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
